edit index.html(todo-list markup), index.js(onClickTodoList, deleteTodo) and style.scss(transition)

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
       </div>
       <div class="todo-container" id="todo-container">
         <div class="todo-list" id="todo-list">
-          <div class="todo">
+          <!-- <div class="todo">
             <input readonly="" class="todo-item" />
             <button id="complete-btn" class="complete-btn">
               <i class="fas fa-check"></i>
@@ -50,7 +50,7 @@
             <button id="delete-btn" class="delete-btn">
               <i class="fas fa-trash"></i>
             </button>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
